--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@formatjs/intl-localematcher": "^0.8.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "firebase": "^12.9.0",
     "lucide-react": "^0.564.0",
     "negotiator": "^1.0.0",
     "next": "16.1.6",
