feat: complete module 1 with entry logic refinements and design system alignment

--- a/.firebaserc
+++ b/.firebaserc
@@ -1,6 +1,7 @@
 {
   "projects": {
-    "default": "spleasy-dev",
+    "default": "spleasy-prod",
+    "dev": "spleasy-dev",
     "prod": "spleasy-prod"
   },
   "targets": {},
