--- a/package.json
+++ b/package.json
@@ -41,5 +41,8 @@
     "tailwindcss": "^4",
     "tw-animate-css": "^1.4.0",
     "typescript": "^5"
+  },
+  "overrides": {
+    "minimatch": "^10.2.2"
   }
 }
