--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@formatjs/intl-localematcher": "^0.8.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "firebase": "^12.9.0",
     "lucide-react": "^0.564.0",
     "negotiator": "^1.0.0",
@@ -24,7 +25,9 @@
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "server-only": "^0.0.1",
-    "tailwind-merge": "^3.4.0"
+    "sonner": "^2.0.7",
+    "tailwind-merge": "^3.4.0",
+    "vaul": "^1.1.2"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
